syntax = "proto3";

package CIS.InternalServices.DocumentGeneratorService.V1;
option csharp_namespace = "CIS.InternalServices.DocumentGeneratorService.Contracts.V1";

import "GenerateDocument.proto";
import "Document.proto";

service DocumentGeneratorService {
	rpc GenerateDocument(GenerateDocumentRequest) returns (Document);
}